--- a/rufangrongke/rufangrongke/Info.plist
+++ b/rufangrongke/rufangrongke/Info.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
-	<key>CFBundleDisplayName</key>
-	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,6 +11,8 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
+	<string>容客宝新房</string>
+	<key>CFBundleDisplayName</key>
 	<string>容客宝新房</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
